--- a/src/reusables/components/card/SellerCard.module.css
+++ b/src/reusables/components/card/SellerCard.module.css
@@ -18,7 +18,7 @@
 
 .root {
   /* height: 200px; */
-  width: 300px;
+  min-width: 300px;
 
   background: white;
   box-shadow: 0px 5px 15px rgba(94, 144, 156, 0.25);
@@ -29,6 +29,7 @@
   font-family: ssp;
 
   padding: 20px 0px;
+  margin: 25px;
 }
 
 .main {
