--- a/src/reusables/components/orderCard/OrderCard.module.css
+++ b/src/reusables/components/orderCard/OrderCard.module.css
@@ -15,6 +15,49 @@
   src: url("/fonts/SourceSansPro-Bold.otf");
   font-display: swap;
 }
+
+.Modal {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background-color: #ffffff;
+  border: none;
+  z-index: 999;
+  border-radius: 5px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 30px;
+  min-width: 300px;
+  max-width: 350px;
+  box-shadow: 1px 1px 8px rgba(0, 0, 0, 0.219);
+}
+
+.Modal:focus {
+  outline: 0;
+}
+
+.Overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+
+  -webkit-backdrop-filter: blur(2.3px);
+  backdrop-filter: blur(2.3px);
+  background-color: #7070702a;
+  z-index: 999;
+}
+
+@supports not (backdrop-filter: none) {
+  .Overlay {
+    background: rgba(0, 0, 0, 0.3);
+  }
+}
+
 .root {
   min-width: 250px;
 
@@ -55,4 +98,19 @@
   display: flex;
   justify-content: space-between;
   padding: 10px 0;
+}
+
+.details {
+  padding: 10px 0;
+  display: flex;
+}
+
+.hname {
+  flex: 1;
+}
+
+.det {
+  flex: 1;
+  display: flex;
+  justify-content: flex-end;
 }
