--- a/src/components/hospitalDashboard/HospitalDashboard.module.css
+++ b/src/components/hospitalDashboard/HospitalDashboard.module.css
@@ -1,11 +1,11 @@
 .root {
+  padding: 50px;
 }
 
 .pieCard {
   height: 500px;
   width: 500px;
-  background-color: aqua;
-
-  /* display: grid;
-  place-items: center; */
+  background: white;
+  box-shadow: 0px 5px 15px rgba(94, 144, 156, 0.25);
+  border-radius: 15px;
 }
