--- a/src/components/home/Home.module.css
+++ b/src/components/home/Home.module.css
@@ -1,28 +1,77 @@
+@font-face {
+  font-family: sspb;
+  src: url("/fonts/SourceSansPro-Bold.otf");
+  font-display: swap;
+}
+
+@font-face {
+  font-family: ssp;
+  src: url("/fonts/SourceSansPro-Regular.otf");
+  font-display: swap;
+}
+
 .root {
   height: auto;
   background-color: azure;
+
+  font-family: ssp;
 }
 
-.first{
+.first,
+.third {
   min-height: 80vh;
   display: flex;
+  justify-content: space-evenly;
   align-items: center;
-  max-height: 90vh;
+  /* max-height: 90vh; */
   width: 100%;
+
+  padding: 30px;
 }
 
-.leftFirst{
-  flex: 1;
+.left {
   display: flex;
-  justify-content: center;
   flex-direction: column;
-  padding:0px 20px;
+  justify-content: space-evenly;
+  align-items: flex-start;
+
+  max-width: 600px;
 }
 
-.rightFirst{
-  flex:1;
-  display: flex;
+.tagline {
+  font-family: sspb;
+  font-size: 30px;
+  line-height: 1.5;
+  padding: 3px;
 }
-.img{
-height: 700px;
+
+.description {
+  line-height: 1.5;
+}
+
+.right {
+}
+
+.img1 {
+  height: 500px;
+}
+
+.second {
+  min-height: 80vh;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  /* max-height: 90vh; */
+  width: 100%;
+
+  padding: 30px;
+  background-color: white;
+}
+
+.img2 {
+  height: 400px;
+}
+
+.img3 {
+  height: 400px;
 }
