--- a/src/components/auth/Auth.module.css
+++ b/src/components/auth/Auth.module.css
@@ -8,10 +8,13 @@
   /* position: absolute;
   top: 0;
   left: 0; */
+
+  /* position: fixed; */
 }
 
 .main {
   flex: 1;
+
   /* position: absolute;
   top: 0;
   left: 110px; */
