--- a/src/components/hospitalDashboard/HospitalDashboard.module.css
+++ b/src/components/hospitalDashboard/HospitalDashboard.module.css
@@ -4,7 +4,7 @@
 
 .pieCard {
   height: 500px;
-  width: 500px;
+  min-width: 500px;
   background: white;
   box-shadow: 0px 5px 15px rgba(94, 144, 156, 0.25);
   border-radius: 15px;
