--- a/src/components/navbar/Navbar.module.css
+++ b/src/components/navbar/Navbar.module.css
@@ -3,8 +3,9 @@
   src: url("/fonts/SourceSansPro-Regular.otf");
   font-display: swap;
 }
+
 @font-face {
-  font-family: "Georgia_Bold";
+  font-family: sspb;
   src: url("/fonts/SourceSansPro-Bold.otf");
   font-display: swap;
 }
@@ -28,9 +29,9 @@
 }
 
 .logo {
-  /* padding: 0.4em 0.5em; */
+  padding: 0.4em 0.5em;
   flex: 1;
-  font-family: "Georgia_Bold";
+  font-family: sspb;
 }
 
 .logoImg {
