--- a/src/reusables/components/footer/Footer.module.css
+++ b/src/reusables/components/footer/Footer.module.css
@@ -19,8 +19,8 @@
 
   font-family: sspb;
   color: #5c5c5c;
-
-  position: absolute;
+  background-color: #fff;
+  position: fixed;
   bottom: 0;
   right: 0;
 }
