--- a/src/components/hospitalDashboard/HospitalDashboard.module.css
+++ b/src/components/hospitalDashboard/HospitalDashboard.module.css
@@ -1,5 +1,5 @@
 .root {
-  padding: 50px;
+  margin-bottom: 5em;
 }
 
 .pieCard {
@@ -9,5 +9,13 @@
   box-shadow: 0px 5px 15px rgba(94, 144, 156, 0.25);
   border-radius: 15px;
 
-  margin: 2em 0;
+  margin: 2em 3em;
+}
+
+.cardTitle {
+  line-height: 1.7;
+  text-align: center;
+  font-family: sspb;
+  font-size: 2rem;
+  margin-top: 1.5em;
 }
